--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,24 @@
   border-style: solid;
 }
 
+.Pool-list {
+  border: none;
+  color: DarkGrey;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: flex;
+  width:100%;
+}
+
+.Pool-list:hover {
+  background-color: LightGrey;
+  border:solid;
+  border-width:5px;
+  border-color:DarkGrey;
+  border-radius:12px;
+}
+
 label {
   display: flex;
   align-items: center;
