--- a/src/style.css
+++ b/src/style.css
@@ -20,3 +20,16 @@
   box-shadow: 0 5px #666;
   transform: translateY(4px);
 }
+.footer {
+   position: fixed;
+   left: 0;
+   bottom: 10%;
+   width: 100%;
+   color: #cc9514;
+   text-align: center;
+   font-size: 30px;
+   font-family: Arial, Helvetica, sans-serif;
+   font-style: italic;
+     font-weight: bold;
+
+}
