--- a/src/style.css
+++ b/src/style.css
@@ -33,3 +33,9 @@
      font-weight: bold;
 
 }
+
+.label{
+    font-family: Arial, Helvetica, sans-serif;
+   font-style: italic;
+     font-weight: bold;
+}
