Edited some elements and created a basic color scheme to use

--- a/src/App.css
+++ b/src/App.css
@@ -86,3 +86,11 @@ label {
   border-radius:12px;
   font-size: 32px;
 }
+
+button {
+  border: none;
+  color: #c5ccd3;
+  border-radius:12px;
+  color: black;
+  font-size: calc(10px + 1vmin);
+}
