--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 .button {
-  display: inline-block;
+  display: flex;
   padding: 5px 20px;
   font-size: 24px;
   cursor: pointer;
@@ -7,13 +7,13 @@
   text-decoration: none;
   outline: none;
   color: #fff;
-  background-color: grey;
+  background-color: #637383;
   border: none;
   border-radius: 15px;
-  box-shadow: 0 9px #999;
+  box-shadow: 0 9px #D8EDEE;
 }
 
-.button:hover {background-color: #3e8e41}
+.button:hover {background-color: #17232E}
 
 .button:active {
   background-color: #3e8e41;
