--- a/src/style.css
+++ b/src/style.css
@@ -21,15 +21,13 @@
   transform: translateY(4px);
 }
 .footer {
-   position: fixed;
-   left: 0;
-   bottom: 10%;
-   width: 100%;
+    display:flex;
+    flex-direction:column;
+   min-width: 100%;
    color: #cc9514;
    text-align: center;
    font-size: 30px;
    font-family: Arial, Helvetica, sans-serif;
-   font-style: italic;
      font-weight: bold;
 
 }
